openbao/overlays/staging/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
  namespace: openbao
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "openbao.kitetsu.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openbao
          port: 8200
